update fonts and adjust controls

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta property="og:image" content="/opengraph-image.png" />
     <meta property="og:type" content="website" />
   </head>
-  <body style="background: #e8e3dd">
+  <body style="background: #d5cdc3">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
