Add robots.txt and SEO

--- a/index.html
+++ b/index.html
@@ -4,26 +4,68 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drumhaus</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Drumhaus - Free Online Drum Machine | Beat Maker & Sequencer</title>
     <meta
       name="description"
-      content="Drumhaus is the ultimate browser controlled rhythmic groove machine. Explore web based drum sampling with limitless creativity, and share it all with your friends."
+      content="Free online drum machine with pro-quality samples. Create beats instantly in your browser - no download required. Features 8 instruments, step sequencer, and preset sharing."
     />
     <meta
       name="keywords"
-      content="Drumhaus, drum machine, online drum machine, web based drum machine, free online drum machine, browser controlled drum machine, online sampler, browser sampler, digital audio workstation, DAW, online DAW, music software, drum haus, drums, bauhaus, samples, drum samples, online drum maker, web based, music, creative, code, software engineer, software, Max Fung"
+      content="free online drum machine, drum machine online, beat maker, drum sequencer, online beat maker, free beat maker, browser drum machine, web drum machine, drum pad online, rhythm machine, drum sampler, make beats online"
     />
-    <meta name="creator" content="Max Fung" />
+    <meta name="author" content="Max Fung" />
+    <link rel="canonical" href="https://drumha.us/" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="Drumhaus" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://drumha.us/" />
+    <meta property="og:title" content="Drumhaus - Free Online Drum Machine" />
     <meta
       property="og:description"
-      content="Drumhaus is the ultimate browser controlled rhythmic groove machine. Explore web based drum sampling with limitless creativity, and share it all with your friends."
+      content="Free online drum machine with pro-quality samples. Create beats instantly in your browser - no download required."
     />
-    <meta property="og:image" content="/opengraph-image.png" />
-    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://drumha.us/opengraph-image.png" />
+    <meta property="og:site_name" content="Drumhaus" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://drumha.us/" />
+    <meta name="twitter:title" content="Drumhaus - Free Online Drum Machine" />
+    <meta
+      name="twitter:description"
+      content="Free online drum machine with pro-quality samples. Create beats instantly in your browser - no download required."
+    />
+    <meta
+      name="twitter:image"
+      content="https://drumha.us/opengraph-image.png"
+    />
+
+    <!-- Structured Data for Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Drumhaus",
+        "url": "https://drumha.us",
+        "description": "Free online drum machine with pro-quality samples. Create beats instantly in your browser.",
+        "applicationCategory": "MultimediaApplication",
+        "operatingSystem": "Any",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Max Fung",
+          "url": "https://fung.studio"
+        },
+        "browserRequirements": "Requires JavaScript and Web Audio API"
+      }
+    </script>
   </head>
   <body style="background: #d5cdc3">
     <div id="root"></div>
