--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+    <meta name="theme-color" content="#e8e3dd" />
 
     <!-- Primary Meta Tags -->
     <title>Drumhaus - Free Online Drum Machine | Beat Maker & Sequencer</title>
