--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
   </head>
   <body style="background: #d5cdc3">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/app/main.tsx"></script>
   </body>
 </html>
