Change browser-controlled to portable in marketing wording

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <meta name="theme-color" content="#e8e3dd" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
 
     <!-- Primary Meta Tags -->
     <title>Drumhaus - Free Online Drum Machine | Beat Maker & Sequencer</title>
